# Paayo-Nepal

./: .env.example  .gitignore  README.md  docker-compose.yml  plan
docker/nginx/: nginx.conf  nginx.conf.template  nginx.dev.conf.template
docker/nginx/conf.d/: default.conf
scripts/prod/: README.md  setup-production.sh
scripts/s3/: s3-connection-check.sh
tour_backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  Dockerfile.dev
tour_backend/migrations/: 20250101000000_initial_schema.sql  20250102000000_soft_delete_unique_indexes.sql  20250102000001_comment_hotel_target.sql  20250103000000_region_geography_columns.sql  20260118000000_photo_images_uploaded_by.sql  20260218000001_content_links_unique_source_target.sql  20260219000000_hotel_branch_region.sql  20260220000000_verification_updated_at.sql
tour_backend/src/: lib.rs  main.rs
tour_backend/src/config/: database.rs  mod.rs  redis.rs  settings.rs
tour_backend/src/error/: api_error.rs  mod.rs
tour_backend/src/extractors/: auth.rs  mod.rs  pagination.rs
tour_backend/src/handlers/: activities.rs  attractions.rs  comments.rs  content_links.rs  events.rs  hero_slides.rs  hotels.rs  likes.rs  media.rs  mod.rs  notifications.rs  photo_features.rs  posts.rs  regions.rs  search.rs  tags.rs  users.rs  videos.rs  views.rs
tour_backend/src/middleware/: auth.rs  cache_control.rs  csrf.rs  logging.rs  mod.rs  rate_limit.rs  request_id.rs
tour_backend/src/models/: activity.rs  attraction.rs  comment.rs  common.rs  content_link.rs  event.rs  hero_slide.rs  hotel.rs  like.rs  media.rs  mod.rs  notification.rs  photo_feature.rs  post.rs  region.rs  tag.rs  user.rs  video.rs  view.rs
tour_backend/src/routes/: activities.rs  attractions.rs  comments.rs  content.rs  content_links.rs  events.rs  health.rs  hero_slides.rs  hotels.rs  likes.rs  media.rs  mod.rs  notifications.rs  photo_features.rs  posts.rs  regions.rs  search.rs  tags.rs  users.rs  videos.rs  views.rs
tour_backend/src/services/: activity_service.rs  attraction_service.rs  cache_service.rs  comment_service.rs  content_link_service.rs  event_service.rs  hero_slide_service.rs  hotel_service.rs  image_service.rs  like_service.rs  media_cleanup_service.rs  media_service.rs  mod.rs  notification_service.rs  photo_feature_service.rs  post_service.rs  region_service.rs  search_service.rs  tag_service.rs  user_service.rs  video_service.rs  view_service.rs
tour_backend/src/utils/: mod.rs  pagination.rs  slug.rs  validation.rs
tour_frontend/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  drizzle.config.ts  next.config.ts  package.json
tour_frontend/app/: globals.css  layout.tsx  loading.tsx  page.tsx  robots.ts  sitemap.ts
tour_frontend/app/(auth)/: layout.tsx
tour_frontend/app/(client)/: layout.tsx  page.tsx
tour_frontend/app/(dashboard)/: layout.tsx
tour_frontend/app/about/: page.tsx
tour_frontend/app/activities/: layout.tsx  page.tsx
tour_frontend/app/articles/: layout.tsx  page.tsx
tour_frontend/app/attractions/: layout.tsx  page.tsx
tour_frontend/app/blogs/: layout.tsx
tour_frontend/app/events/: layout.tsx  page.tsx
tour_frontend/app/hotels/: page.tsx
tour_frontend/app/photos/: page.tsx
tour_frontend/app/regions/: layout.tsx  page.tsx
tour_frontend/app/search/: layout.tsx  page.tsx
tour_frontend/app/videos/: page.tsx
tour_frontend/components/atoms/: anima-image.tsx  article-card.tsx  badge.tsx  event-card.tsx  gradualblur.tsx  heading.tsx  image-card.tsx  section-heading.tsx  text.tsx  video-card.tsx  view-more-button.tsx
tour_frontend/components/attractions/: activities-accordion.tsx
tour_frontend/components/dashboard/: AdminHeader.tsx  AdminSidebar.tsx  DashboardCard.tsx  DashboardRefresher.tsx  NotificationBell.tsx  RegionLocationSettings.tsx  UsersManagement.tsx
tour_frontend/components/editor/: LexicalEditor.tsx  NotionEditorField.tsx  TiptapEditor.tsx
tour_frontend/components/layout/: ConditionalLayout.tsx  UserAvatar.tsx  header.tsx  transition.tsx
tour_frontend/components/maps/: region-map-preview.tsx
tour_frontend/data/: activities.ts  blogs.ts  home.ts
tour_frontend/lib/: api-client.ts  app-url.ts  auth-client.ts  auth-mailer.ts  auth-server.ts  auth.ts  csrf.ts  device-id.ts  image-utils.ts  media-url.ts  post-routes.ts  region-location.ts  require-active.ts  sanitize.ts  seo.ts  server-session.ts
(+168 files in other folders)
