[package]
name = "tour_backend"
version = "0.1.0"
edition = "2021"
description = "Nepal Tourism API Backend"
authors = ["Paayo Nepal Team"]

[dependencies]
# Web Framework
axum = { version = "0.8", features = ["multipart", "macros"] }
tokio = { version = "1.49", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "limit", "timeout", "fs"] }

# Database
# - disable default features to avoid unused drivers in the dependency graph
# - keep only postgres + macro/migrate features used by this backend
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "postgres", "chrono", "uuid", "json", "macros", "migrate"] }

# Redis
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"] }
aws-config = "1.8"
aws-sdk-s3 = "1.124"
aws-credential-types = "1.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Validation
validator = { version = "0.20", features = ["derive"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.21", features = ["v4", "serde"] }

# Password hashing (BetterAuth compatible)
bcrypt = "0.18"

# Image Processing - AVIF support
image = { version = "0.25", features = ["avif", "jpeg", "png", "webp"] }
blurhash = "0.2"
ravif = { version = "0.13", default-features = false, features = ["threading"] } # Disable asm to avoid NASM requirement

# Async utilities
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"
tokio-stream = "0.1"

# Environment & Config
dotenvy = "0.15"
config = "0.15"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Rate limiting
governor = "0.10"

# Slug generation
slug = "0.1"

# Cryptographic hashing (viewer hash)
sha2 = "0.10"

# CSRF token generation
rand = "0.10"
hex = "0.4"

# HTML sanitization (XSS prevention for user-submitted content)
ammonia = "4"

# MIME type detection
mime_guess = "2.0"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
